frontend/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     empty -> <empty>
Rule 2     type -> Int
Rule 3     program -> function_list
Rule 4     function_list -> function function_list
Rule 5     function_list -> empty
Rule 6     function -> type Identifier LParen parameter_list RParen LBrace block RBrace
Rule 7     parameter_list -> parameter Comma parameter_list
Rule 8     parameter_list -> parameter
Rule 9     parameter_list -> empty
Rule 10    parameter -> type Identifier
Rule 11    block -> block block_item
Rule 12    block -> empty
Rule 13    block_item -> statement
Rule 14    block_item -> declaration Semi
Rule 15    statement -> statement_matched
Rule 16    statement -> statement_unmatched
Rule 17    statement_matched -> If LParen expression RParen statement_matched Else statement_matched
Rule 18    statement_unmatched -> If LParen expression RParen statement_matched Else statement_unmatched
Rule 19    statement_unmatched -> If LParen expression RParen statement
Rule 20    statement_matched -> While LParen expression RParen statement_matched
Rule 21    statement_unmatched -> While LParen expression RParen statement_unmatched
Rule 22    statement_matched -> For LParen opt_expression Semi opt_expression Semi opt_expression RParen statement_matched
Rule 23    statement_matched -> For LParen declaration Semi opt_expression Semi opt_expression RParen statement_matched
Rule 24    statement_unmatched -> For LParen opt_expression Semi opt_expression Semi opt_expression RParen statement_unmatched
Rule 25    statement_unmatched -> For LParen declaration Semi opt_expression Semi opt_expression RParen statement_unmatched
Rule 26    statement_unmatched -> For LParen opt_expression Semi opt_expression Semi opt_expression RParen statement_matched
Rule 27    statement_unmatched -> For LParen declaration Semi opt_expression Semi opt_expression RParen statement_matched
Rule 28    statement_matched -> Do statement_matched While LParen expression RParen Semi
Rule 29    statement_unmatched -> Do statement_unmatched While LParen expression RParen Semi
Rule 30    statement_unmatched -> Do statement_matched While LParen expression RParen Semi
Rule 31    statement_matched -> Continue Semi
Rule 32    statement_matched -> Return expression Semi
Rule 33    statement_matched -> opt_expression Semi
Rule 34    statement_matched -> LBrace block RBrace
Rule 35    statement_matched -> Break Semi
Rule 36    opt_expression -> expression
Rule 37    opt_expression -> empty
Rule 38    declaration -> type Identifier
Rule 39    declaration -> type Identifier Assign expression
Rule 40    expression_list -> expression Comma expression_list
Rule 41    expression_list -> expression
Rule 42    expression_list -> empty
Rule 43    expression -> assignment
Rule 44    assignment -> conditional
Rule 45    conditional -> logical_or
Rule 46    logical_or -> logical_and
Rule 47    logical_and -> bit_or
Rule 48    bit_or -> xor
Rule 49    xor -> bit_and
Rule 50    bit_and -> equality
Rule 51    equality -> relational
Rule 52    relational -> additive
Rule 53    additive -> multiplicative
Rule 54    multiplicative -> unary
Rule 55    unary -> postfix
Rule 56    postfix -> primary
Rule 57    postfix -> Identifier LParen expression_list RParen
Rule 58    unary -> Minus unary
Rule 59    unary -> BitNot unary
Rule 60    unary -> Not unary
Rule 61    assignment -> Identifier Assign expression
Rule 62    logical_or -> logical_or Or logical_and
Rule 63    logical_and -> logical_and And bit_or
Rule 64    bit_or -> bit_or BitOr xor
Rule 65    xor -> xor Xor bit_and
Rule 66    bit_and -> bit_and BitAnd equality
Rule 67    equality -> equality NotEqual relational
Rule 68    equality -> equality Equal relational
Rule 69    relational -> relational Less additive
Rule 70    relational -> relational Greater additive
Rule 71    relational -> relational LessEqual additive
Rule 72    relational -> relational GreaterEqual additive
Rule 73    additive -> additive Plus multiplicative
Rule 74    additive -> additive Minus multiplicative
Rule 75    multiplicative -> multiplicative Mul unary
Rule 76    multiplicative -> multiplicative Div unary
Rule 77    multiplicative -> multiplicative Mod unary
Rule 78    conditional -> logical_or Question expression Colon conditional
Rule 79    primary -> Integer
Rule 80    primary -> Identifier
Rule 81    primary -> LParen expression RParen

Terminals, with rules where they appear

And                  : 63
Assign               : 39 61
BitAnd               : 66
BitNot               : 59
BitOr                : 64
Break                : 35
Colon                : 78
Comma                : 7 40
Continue             : 31
Div                  : 76
Do                   : 28 29 30
Else                 : 17 18
Equal                : 68
For                  : 22 23 24 25 26 27
Greater              : 70
GreaterEqual         : 72
Identifier           : 6 10 38 39 57 61 80
If                   : 17 18 19
Int                  : 2
Integer              : 79
LBrace               : 6 34
LParen               : 6 17 18 19 20 21 22 23 24 25 26 27 28 29 30 57 81
Less                 : 69
LessEqual            : 71
Minus                : 58 74
Mod                  : 77
Mul                  : 75
Not                  : 60
NotEqual             : 67
Or                   : 62
Plus                 : 73
Question             : 78
RBrace               : 6 34
RParen               : 6 17 18 19 20 21 22 23 24 25 26 27 28 29 30 57 81
Return               : 32
Semi                 : 14 22 22 23 23 24 24 25 25 26 26 27 27 28 29 30 31 32 33 35
While                : 20 21 28 29 30
Xor                  : 65
error                : 

Nonterminals, with rules where they appear

additive             : 52 69 70 71 72 73 74
assignment           : 43
bit_and              : 49 65 66
bit_or               : 47 63 64
block                : 6 11 34
block_item           : 11
conditional          : 44 78
declaration          : 14 23 25 27
empty                : 5 9 12 37 42
equality             : 50 66 67 68
expression           : 17 18 19 20 21 28 29 30 32 36 39 40 41 61 78 81
expression_list      : 40 57
function             : 4
function_list        : 3 4
logical_and          : 46 62 63
logical_or           : 45 62 78
multiplicative       : 53 73 74 75 76 77
opt_expression       : 22 22 22 23 23 24 24 24 25 25 26 26 26 27 27 33
parameter            : 7 8
parameter_list       : 6 7
postfix              : 55
primary              : 56
program              : 0
relational           : 51 67 68 69 70 71 72
statement            : 13 19
statement_matched    : 15 17 17 18 20 22 23 26 27 28 30
statement_unmatched  : 16 18 21 24 25 29
type                 : 6 10 38 39
unary                : 54 58 59 60 75 76 77
xor                  : 48 64 65

Parsing method: LALR

state 0

    (0) S' -> . program
    (3) program -> . function_list
    (4) function_list -> . function function_list
    (5) function_list -> . empty
    (6) function -> . type Identifier LParen parameter_list RParen LBrace block RBrace
    (1) empty -> .
    (2) type -> . Int

    $end            reduce using rule 1 (empty -> .)
    Int             shift and go to state 6

    program                        shift and go to state 1
    function_list                  shift and go to state 2
    function                       shift and go to state 3
    empty                          shift and go to state 4
    type                           shift and go to state 5

state 1

    (0) S' -> program .



state 2

    (3) program -> function_list .

    $end            reduce using rule 3 (program -> function_list .)


state 3

    (4) function_list -> function . function_list
    (4) function_list -> . function function_list
    (5) function_list -> . empty
    (6) function -> . type Identifier LParen parameter_list RParen LBrace block RBrace
    (1) empty -> .
    (2) type -> . Int

    $end            reduce using rule 1 (empty -> .)
    Int             shift and go to state 6

    function                       shift and go to state 3
    function_list                  shift and go to state 7
    empty                          shift and go to state 4
    type                           shift and go to state 5

state 4

    (5) function_list -> empty .

    $end            reduce using rule 5 (function_list -> empty .)


state 5

    (6) function -> type . Identifier LParen parameter_list RParen LBrace block RBrace

    Identifier      shift and go to state 8


state 6

    (2) type -> Int .

    Identifier      reduce using rule 2 (type -> Int .)


state 7

    (4) function_list -> function function_list .

    $end            reduce using rule 4 (function_list -> function function_list .)


state 8

    (6) function -> type Identifier . LParen parameter_list RParen LBrace block RBrace

    LParen          shift and go to state 9


state 9

    (6) function -> type Identifier LParen . parameter_list RParen LBrace block RBrace
    (7) parameter_list -> . parameter Comma parameter_list
    (8) parameter_list -> . parameter
    (9) parameter_list -> . empty
    (10) parameter -> . type Identifier
    (1) empty -> .
    (2) type -> . Int

    RParen          reduce using rule 1 (empty -> .)
    Int             shift and go to state 6

    type                           shift and go to state 10
    parameter_list                 shift and go to state 11
    parameter                      shift and go to state 12
    empty                          shift and go to state 13

state 10

    (10) parameter -> type . Identifier

    Identifier      shift and go to state 14


state 11

    (6) function -> type Identifier LParen parameter_list . RParen LBrace block RBrace

    RParen          shift and go to state 15


state 12

    (7) parameter_list -> parameter . Comma parameter_list
    (8) parameter_list -> parameter .

    Comma           shift and go to state 16
    RParen          reduce using rule 8 (parameter_list -> parameter .)


state 13

    (9) parameter_list -> empty .

    RParen          reduce using rule 9 (parameter_list -> empty .)


state 14

    (10) parameter -> type Identifier .

    Comma           reduce using rule 10 (parameter -> type Identifier .)
    RParen          reduce using rule 10 (parameter -> type Identifier .)


state 15

    (6) function -> type Identifier LParen parameter_list RParen . LBrace block RBrace

    LBrace          shift and go to state 17


state 16

    (7) parameter_list -> parameter Comma . parameter_list
    (7) parameter_list -> . parameter Comma parameter_list
    (8) parameter_list -> . parameter
    (9) parameter_list -> . empty
    (10) parameter -> . type Identifier
    (1) empty -> .
    (2) type -> . Int

    RParen          reduce using rule 1 (empty -> .)
    Int             shift and go to state 6

    parameter                      shift and go to state 12
    parameter_list                 shift and go to state 18
    empty                          shift and go to state 13
    type                           shift and go to state 10

state 17

    (6) function -> type Identifier LParen parameter_list RParen LBrace . block RBrace
    (11) block -> . block block_item
    (12) block -> . empty
    (1) empty -> .

    RBrace          reduce using rule 1 (empty -> .)
    If              reduce using rule 1 (empty -> .)
    While           reduce using rule 1 (empty -> .)
    For             reduce using rule 1 (empty -> .)
    Do              reduce using rule 1 (empty -> .)
    Continue        reduce using rule 1 (empty -> .)
    Return          reduce using rule 1 (empty -> .)
    LBrace          reduce using rule 1 (empty -> .)
    Break           reduce using rule 1 (empty -> .)
    Int             reduce using rule 1 (empty -> .)
    Identifier      reduce using rule 1 (empty -> .)
    Minus           reduce using rule 1 (empty -> .)
    BitNot          reduce using rule 1 (empty -> .)
    Not             reduce using rule 1 (empty -> .)
    Integer         reduce using rule 1 (empty -> .)
    LParen          reduce using rule 1 (empty -> .)
    Semi            reduce using rule 1 (empty -> .)

    block                          shift and go to state 19
    empty                          shift and go to state 20

state 18

    (7) parameter_list -> parameter Comma parameter_list .

    RParen          reduce using rule 7 (parameter_list -> parameter Comma parameter_list .)


state 19

    (6) function -> type Identifier LParen parameter_list RParen LBrace block . RBrace
    (11) block -> block . block_item
    (13) block_item -> . statement
    (14) block_item -> . declaration Semi
    (15) statement -> . statement_matched
    (16) statement -> . statement_unmatched
    (38) declaration -> . type Identifier
    (39) declaration -> . type Identifier Assign expression
    (17) statement_matched -> . If LParen expression RParen statement_matched Else statement_matched
    (20) statement_matched -> . While LParen expression RParen statement_matched
    (22) statement_matched -> . For LParen opt_expression Semi opt_expression Semi opt_expression RParen statement_matched
    (23) statement_matched -> . For LParen declaration Semi opt_expression Semi opt_expression RParen statement_matched
    (28) statement_matched -> . Do statement_matched While LParen expression RParen Semi
    (31) statement_matched -> . Continue Semi
    (32) statement_matched -> . Return expression Semi
    (33) statement_matched -> . opt_expression Semi
    (34) statement_matched -> . LBrace block RBrace
    (35) statement_matched -> . Break Semi
    (18) statement_unmatched -> . If LParen expression RParen statement_matched Else statement_unmatched
    (19) statement_unmatched -> . If LParen expression RParen statement
    (21) statement_unmatched -> . While LParen expression RParen statement_unmatched
    (24) statement_unmatched -> . For LParen opt_expression Semi opt_expression Semi opt_expression RParen statement_unmatched
    (25) statement_unmatched -> . For LParen declaration Semi opt_expression Semi opt_expression RParen statement_unmatched
    (26) statement_unmatched -> . For LParen opt_expression Semi opt_expression Semi opt_expression RParen statement_matched
    (27) statement_unmatched -> . For LParen declaration Semi opt_expression Semi opt_expression RParen statement_matched
    (29) statement_unmatched -> . Do statement_unmatched While LParen expression RParen Semi
    (30) statement_unmatched -> . Do statement_matched While LParen expression RParen Semi
    (2) type -> . Int
    (36) opt_expression -> . expression
    (37) opt_expression -> . empty
    (43) expression -> . assignment
    (1) empty -> .
    (44) assignment -> . conditional
    (61) assignment -> . Identifier Assign expression
    (45) conditional -> . logical_or
    (78) conditional -> . logical_or Question expression Colon conditional
    (46) logical_or -> . logical_and
    (62) logical_or -> . logical_or Or logical_and
    (47) logical_and -> . bit_or
    (63) logical_and -> . logical_and And bit_or
    (48) bit_or -> . xor
    (64) bit_or -> . bit_or BitOr xor
    (49) xor -> . bit_and
    (65) xor -> . xor Xor bit_and
    (50) bit_and -> . equality
    (66) bit_and -> . bit_and BitAnd equality
    (51) equality -> . relational
    (67) equality -> . equality NotEqual relational
    (68) equality -> . equality Equal relational
    (52) relational -> . additive
    (69) relational -> . relational Less additive
    (70) relational -> . relational Greater additive
    (71) relational -> . relational LessEqual additive
    (72) relational -> . relational GreaterEqual additive
    (53) additive -> . multiplicative
    (73) additive -> . additive Plus multiplicative
    (74) additive -> . additive Minus multiplicative
    (54) multiplicative -> . unary
    (75) multiplicative -> . multiplicative Mul unary
    (76) multiplicative -> . multiplicative Div unary
    (77) multiplicative -> . multiplicative Mod unary
    (55) unary -> . postfix
    (58) unary -> . Minus unary
    (59) unary -> . BitNot unary
    (60) unary -> . Not unary
    (56) postfix -> . primary
    (57) postfix -> . Identifier LParen expression_list RParen
    (79) primary -> . Integer
    (80) primary -> . Identifier
    (81) primary -> . LParen expression RParen

    RBrace          shift and go to state 25
    If              shift and go to state 32
    While           shift and go to state 33
    For             shift and go to state 34
    Do              shift and go to state 36
    Continue        shift and go to state 37
    Return          shift and go to state 38
    LBrace          shift and go to state 24
    Break           shift and go to state 39
    Int             shift and go to state 6
    Semi            reduce using rule 1 (empty -> .)
    Identifier      shift and go to state 22
    Minus           shift and go to state 52
    BitNot          shift and go to state 55
    Not             shift and go to state 56
    Integer         shift and go to state 58
    LParen          shift and go to state 23

    type                           shift and go to state 21
    block_item                     shift and go to state 26
    statement                      shift and go to state 27
    declaration                    shift and go to state 28
    statement_matched              shift and go to state 29
    statement_unmatched            shift and go to state 30
    expression                     shift and go to state 31
    opt_expression                 shift and go to state 35
    empty                          shift and go to state 40
    assignment                     shift and go to state 41
    conditional                    shift and go to state 42
    logical_or                     shift and go to state 43
    logical_and                    shift and go to state 44
    bit_or                         shift and go to state 45
    xor                            shift and go to state 46
    bit_and                        shift and go to state 47
    equality                       shift and go to state 48
    relational                     shift and go to state 49
    additive                       shift and go to state 50
    multiplicative                 shift and go to state 51
    unary                          shift and go to state 53
    postfix                        shift and go to state 54
    primary                        shift and go to state 57

state 20

    (12) block -> empty .

    RBrace          reduce using rule 12 (block -> empty .)
    If              reduce using rule 12 (block -> empty .)
    While           reduce using rule 12 (block -> empty .)
    For             reduce using rule 12 (block -> empty .)
    Do              reduce using rule 12 (block -> empty .)
    Continue        reduce using rule 12 (block -> empty .)
    Return          reduce using rule 12 (block -> empty .)
    LBrace          reduce using rule 12 (block -> empty .)
    Break           reduce using rule 12 (block -> empty .)
    Int             reduce using rule 12 (block -> empty .)
    Identifier      reduce using rule 12 (block -> empty .)
    Minus           reduce using rule 12 (block -> empty .)
    BitNot          reduce using rule 12 (block -> empty .)
    Not             reduce using rule 12 (block -> empty .)
    Integer         reduce using rule 12 (block -> empty .)
    LParen          reduce using rule 12 (block -> empty .)
    Semi            reduce using rule 12 (block -> empty .)


state 21

    (38) declaration -> type . Identifier
    (39) declaration -> type . Identifier Assign expression

    Identifier      shift and go to state 59


state 22

    (61) assignment -> Identifier . Assign expression
    (57) postfix -> Identifier . LParen expression_list RParen
    (80) primary -> Identifier .

    Assign          shift and go to state 60
    LParen          shift and go to state 61
    Mul             reduce using rule 80 (primary -> Identifier .)
    Div             reduce using rule 80 (primary -> Identifier .)
    Mod             reduce using rule 80 (primary -> Identifier .)
    Plus            reduce using rule 80 (primary -> Identifier .)
    Minus           reduce using rule 80 (primary -> Identifier .)
    Less            reduce using rule 80 (primary -> Identifier .)
    Greater         reduce using rule 80 (primary -> Identifier .)
    LessEqual       reduce using rule 80 (primary -> Identifier .)
    GreaterEqual    reduce using rule 80 (primary -> Identifier .)
    NotEqual        reduce using rule 80 (primary -> Identifier .)
    Equal           reduce using rule 80 (primary -> Identifier .)
    BitAnd          reduce using rule 80 (primary -> Identifier .)
    Xor             reduce using rule 80 (primary -> Identifier .)
    BitOr           reduce using rule 80 (primary -> Identifier .)
    And             reduce using rule 80 (primary -> Identifier .)
    Question        reduce using rule 80 (primary -> Identifier .)
    Or              reduce using rule 80 (primary -> Identifier .)
    Semi            reduce using rule 80 (primary -> Identifier .)
    RParen          reduce using rule 80 (primary -> Identifier .)
    Comma           reduce using rule 80 (primary -> Identifier .)
    Colon           reduce using rule 80 (primary -> Identifier .)


state 23

    (81) primary -> LParen . expression RParen
    (43) expression -> . assignment
    (44) assignment -> . conditional
    (61) assignment -> . Identifier Assign expression
    (45) conditional -> . logical_or
    (78) conditional -> . logical_or Question expression Colon conditional
    (46) logical_or -> . logical_and
    (62) logical_or -> . logical_or Or logical_and
    (47) logical_and -> . bit_or
    (63) logical_and -> . logical_and And bit_or
    (48) bit_or -> . xor
    (64) bit_or -> . bit_or BitOr xor
    (49) xor -> . bit_and
    (65) xor -> . xor Xor bit_and
    (50) bit_and -> . equality
    (66) bit_and -> . bit_and BitAnd equality
    (51) equality -> . relational
    (67) equality -> . equality NotEqual relational
    (68) equality -> . equality Equal relational
    (52) relational -> . additive
    (69) relational -> . relational Less additive
    (70) relational -> . relational Greater additive
    (71) relational -> . relational LessEqual additive
    (72) relational -> . relational GreaterEqual additive
    (53) additive -> . multiplicative
    (73) additive -> . additive Plus multiplicative
    (74) additive -> . additive Minus multiplicative
    (54) multiplicative -> . unary
    (75) multiplicative -> . multiplicative Mul unary
    (76) multiplicative -> . multiplicative Div unary
    (77) multiplicative -> . multiplicative Mod unary
    (55) unary -> . postfix
    (58) unary -> . Minus unary
    (59) unary -> . BitNot unary
    (60) unary -> . Not unary
    (56) postfix -> . primary
    (57) postfix -> . Identifier LParen expression_list RParen
    (79) primary -> . Integer
    (80) primary -> . Identifier
    (81) primary -> . LParen expression RParen

    Identifier      shift and go to state 22
    Minus           shift and go to state 52
    BitNot          shift and go to state 55
    Not             shift and go to state 56
    Integer         shift and go to state 58
    LParen          shift and go to state 23

    expression                     shift and go to state 62
    assignment                     shift and go to state 41
    conditional                    shift and go to state 42
    logical_or                     shift and go to state 43
    logical_and                    shift and go to state 44
    bit_or                         shift and go to state 45
    xor                            shift and go to state 46
    bit_and                        shift and go to state 47
    equality                       shift and go to state 48
    relational                     shift and go to state 49
    additive                       shift and go to state 50
    multiplicative                 shift and go to state 51
    unary                          shift and go to state 53
    postfix                        shift and go to state 54
    primary                        shift and go to state 57

state 24

    (34) statement_matched -> LBrace . block RBrace
    (11) block -> . block block_item
    (12) block -> . empty
    (1) empty -> .

    RBrace          reduce using rule 1 (empty -> .)
    If              reduce using rule 1 (empty -> .)
    While           reduce using rule 1 (empty -> .)
    For             reduce using rule 1 (empty -> .)
    Do              reduce using rule 1 (empty -> .)
    Continue        reduce using rule 1 (empty -> .)
    Return          reduce using rule 1 (empty -> .)
    LBrace          reduce using rule 1 (empty -> .)
    Break           reduce using rule 1 (empty -> .)
    Int             reduce using rule 1 (empty -> .)
    Identifier      reduce using rule 1 (empty -> .)
    Minus           reduce using rule 1 (empty -> .)
    BitNot          reduce using rule 1 (empty -> .)
    Not             reduce using rule 1 (empty -> .)
    Integer         reduce using rule 1 (empty -> .)
    LParen          reduce using rule 1 (empty -> .)
    Semi            reduce using rule 1 (empty -> .)

    block                          shift and go to state 63
    empty                          shift and go to state 20

state 25

    (6) function -> type Identifier LParen parameter_list RParen LBrace block RBrace .

    Int             reduce using rule 6 (function -> type Identifier LParen parameter_list RParen LBrace block RBrace .)
    $end            reduce using rule 6 (function -> type Identifier LParen parameter_list RParen LBrace block RBrace .)


state 26

    (11) block -> block block_item .

    RBrace          reduce using rule 11 (block -> block block_item .)
    If              reduce using rule 11 (block -> block block_item .)
    While           reduce using rule 11 (block -> block block_item .)
    For             reduce using rule 11 (block -> block block_item .)
    Do              reduce using rule 11 (block -> block block_item .)
    Continue        reduce using rule 11 (block -> block block_item .)
    Return          reduce using rule 11 (block -> block block_item .)
    LBrace          reduce using rule 11 (block -> block block_item .)
    Break           reduce using rule 11 (block -> block block_item .)
    Int             reduce using rule 11 (block -> block block_item .)
    Identifier      reduce using rule 11 (block -> block block_item .)
    Minus           reduce using rule 11 (block -> block block_item .)
    BitNot          reduce using rule 11 (block -> block block_item .)
    Not             reduce using rule 11 (block -> block block_item .)
    Integer         reduce using rule 11 (block -> block block_item .)
    LParen          reduce using rule 11 (block -> block block_item .)
    Semi            reduce using rule 11 (block -> block block_item .)


state 27

    (13) block_item -> statement .

    RBrace          reduce using rule 13 (block_item -> statement .)
    If              reduce using rule 13 (block_item -> statement .)
    While           reduce using rule 13 (block_item -> statement .)
    For             reduce using rule 13 (block_item -> statement .)
    Do              reduce using rule 13 (block_item -> statement .)
    Continue        reduce using rule 13 (block_item -> statement .)
    Return          reduce using rule 13 (block_item -> statement .)
    LBrace          reduce using rule 13 (block_item -> statement .)
    Break           reduce using rule 13 (block_item -> statement .)
    Int             reduce using rule 13 (block_item -> statement .)
    Identifier      reduce using rule 13 (block_item -> statement .)
    Minus           reduce using rule 13 (block_item -> statement .)
    BitNot          reduce using rule 13 (block_item -> statement .)
    Not             reduce using rule 13 (block_item -> statement .)
    Integer         reduce using rule 13 (block_item -> statement .)
    LParen          reduce using rule 13 (block_item -> statement .)
    Semi            reduce using rule 13 (block_item -> statement .)


state 28

    (14) block_item -> declaration . Semi

    Semi            shift and go to state 64


state 29

    (15) statement -> statement_matched .

    RBrace          reduce using rule 15 (statement -> statement_matched .)
    If              reduce using rule 15 (statement -> statement_matched .)
    While           reduce using rule 15 (statement -> statement_matched .)
    For             reduce using rule 15 (statement -> statement_matched .)
    Do              reduce using rule 15 (statement -> statement_matched .)
    Continue        reduce using rule 15 (statement -> statement_matched .)
    Return          reduce using rule 15 (statement -> statement_matched .)
    LBrace          reduce using rule 15 (statement -> statement_matched .)
    Break           reduce using rule 15 (statement -> statement_matched .)
    Int             reduce using rule 15 (statement -> statement_matched .)
    Identifier      reduce using rule 15 (statement -> statement_matched .)
    Minus           reduce using rule 15 (statement -> statement_matched .)
    BitNot          reduce using rule 15 (statement -> statement_matched .)
    Not             reduce using rule 15 (statement -> statement_matched .)
    Integer         reduce using rule 15 (statement -> statement_matched .)
    LParen          reduce using rule 15 (statement -> statement_matched .)
    Semi            reduce using rule 15 (statement -> statement_matched .)


state 30

    (16) statement -> statement_unmatched .

    RBrace          reduce using rule 16 (statement -> statement_unmatched .)
    If              reduce using rule 16 (statement -> statement_unmatched .)
    While           reduce using rule 16 (statement -> statement_unmatched .)
    For             reduce using rule 16 (statement -> statement_unmatched .)
    Do              reduce using rule 16 (statement -> statement_unmatched .)
    Continue        reduce using rule 16 (statement -> statement_unmatched .)
    Return          reduce using rule 16 (statement -> statement_unmatched .)
    LBrace          reduce using rule 16 (statement -> statement_unmatched .)
    Break           reduce using rule 16 (statement -> statement_unmatched .)
    Int             reduce using rule 16 (statement -> statement_unmatched .)
    Identifier      reduce using rule 16 (statement -> statement_unmatched .)
    Minus           reduce using rule 16 (statement -> statement_unmatched .)
    BitNot          reduce using rule 16 (statement -> statement_unmatched .)
    Not             reduce using rule 16 (statement -> statement_unmatched .)
    Integer         reduce using rule 16 (statement -> statement_unmatched .)
    LParen          reduce using rule 16 (statement -> statement_unmatched .)
    Semi            reduce using rule 16 (statement -> statement_unmatched .)


state 31

    (36) opt_expression -> expression .

    Semi            reduce using rule 36 (opt_expression -> expression .)
    RParen          reduce using rule 36 (opt_expression -> expression .)


state 32

    (17) statement_matched -> If . LParen expression RParen statement_matched Else statement_matched
    (18) statement_unmatched -> If . LParen expression RParen statement_matched Else statement_unmatched
    (19) statement_unmatched -> If . LParen expression RParen statement

    LParen          shift and go to state 65


state 33

    (20) statement_matched -> While . LParen expression RParen statement_matched
    (21) statement_unmatched -> While . LParen expression RParen statement_unmatched

    LParen          shift and go to state 66


state 34

    (22) statement_matched -> For . LParen opt_expression Semi opt_expression Semi opt_expression RParen statement_matched
    (23) statement_matched -> For . LParen declaration Semi opt_expression Semi opt_expression RParen statement_matched
    (24) statement_unmatched -> For . LParen opt_expression Semi opt_expression Semi opt_expression RParen statement_unmatched
    (25) statement_unmatched -> For . LParen declaration Semi opt_expression Semi opt_expression RParen statement_unmatched
    (26) statement_unmatched -> For . LParen opt_expression Semi opt_expression Semi opt_expression RParen statement_matched
    (27) statement_unmatched -> For . LParen declaration Semi opt_expression Semi opt_expression RParen statement_matched

    LParen          shift and go to state 67


state 35

    (33) statement_matched -> opt_expression . Semi

    Semi            shift and go to state 68


state 36

    (28) statement_matched -> Do . statement_matched While LParen expression RParen Semi
    (29) statement_unmatched -> Do . statement_unmatched While LParen expression RParen Semi
    (30) statement_unmatched -> Do . statement_matched While LParen expression RParen Semi
    (17) statement_matched -> . If LParen expression RParen statement_matched Else statement_matched
    (20) statement_matched -> . While LParen expression RParen statement_matched
    (22) statement_matched -> . For LParen opt_expression Semi opt_expression Semi opt_expression RParen statement_matched
    (23) statement_matched -> . For LParen declaration Semi opt_expression Semi opt_expression RParen statement_matched
    (28) statement_matched -> . Do statement_matched While LParen expression RParen Semi
    (31) statement_matched -> . Continue Semi
    (32) statement_matched -> . Return expression Semi
    (33) statement_matched -> . opt_expression Semi
    (34) statement_matched -> . LBrace block RBrace
    (35) statement_matched -> . Break Semi
    (18) statement_unmatched -> . If LParen expression RParen statement_matched Else statement_unmatched
    (19) statement_unmatched -> . If LParen expression RParen statement
    (21) statement_unmatched -> . While LParen expression RParen statement_unmatched
    (24) statement_unmatched -> . For LParen opt_expression Semi opt_expression Semi opt_expression RParen statement_unmatched
    (25) statement_unmatched -> . For LParen declaration Semi opt_expression Semi opt_expression RParen statement_unmatched
    (26) statement_unmatched -> . For LParen opt_expression Semi opt_expression Semi opt_expression RParen statement_matched
    (27) statement_unmatched -> . For LParen declaration Semi opt_expression Semi opt_expression RParen statement_matched
    (29) statement_unmatched -> . Do statement_unmatched While LParen expression RParen Semi
    (30) statement_unmatched -> . Do statement_matched While LParen expression RParen Semi
    (36) opt_expression -> . expression
    (37) opt_expression -> . empty
    (43) expression -> . assignment
    (1) empty -> .
    (44) assignment -> . conditional
    (61) assignment -> . Identifier Assign expression
    (45) conditional -> . logical_or
    (78) conditional -> . logical_or Question expression Colon conditional
    (46) logical_or -> . logical_and
    (62) logical_or -> . logical_or Or logical_and
    (47) logical_and -> . bit_or
    (63) logical_and -> . logical_and And bit_or
    (48) bit_or -> . xor
    (64) bit_or -> . bit_or BitOr xor
    (49) xor -> . bit_and
    (65) xor -> . xor Xor bit_and
    (50) bit_and -> . equality
    (66) bit_and -> . bit_and BitAnd equality
    (51) equality -> . relational
    (67) equality -> . equality NotEqual relational
    (68) equality -> . equality Equal relational
    (52) relational -> . additive
    (69) relational -> . relational Less additive
    (70) relational -> . relational Greater additive
    (71) relational -> . relational LessEqual additive
    (72) relational -> . relational GreaterEqual additive
    (53) additive -> . multiplicative
    (73) additive -> . additive Plus multiplicative
    (74) additive -> . additive Minus multiplicative
    (54) multiplicative -> . unary
    (75) multiplicative -> . multiplicative Mul unary
    (76) multiplicative -> . multiplicative Div unary
    (77) multiplicative -> . multiplicative Mod unary
    (55) unary -> . postfix
    (58) unary -> . Minus unary
    (59) unary -> . BitNot unary
    (60) unary -> . Not unary
    (56) postfix -> . primary
    (57) postfix -> . Identifier LParen expression_list RParen
    (79) primary -> . Integer
    (80) primary -> . Identifier
    (81) primary -> . LParen expression RParen

    If              shift and go to state 32
    While           shift and go to state 33
    For             shift and go to state 34
    Do              shift and go to state 36
    Continue        shift and go to state 37
    Return          shift and go to state 38
    LBrace          shift and go to state 24
    Break           shift and go to state 39
    Semi            reduce using rule 1 (empty -> .)
    Identifier      shift and go to state 22
    Minus           shift and go to state 52
    BitNot          shift and go to state 55
    Not             shift and go to state 56
    Integer         shift and go to state 58
    LParen          shift and go to state 23

    statement_matched              shift and go to state 69
    expression                     shift and go to state 31
    statement_unmatched            shift and go to state 70
    opt_expression                 shift and go to state 35
    empty                          shift and go to state 40
    assignment                     shift and go to state 41
    conditional                    shift and go to state 42
    logical_or                     shift and go to state 43
    logical_and                    shift and go to state 44
    bit_or                         shift and go to state 45
    xor                            shift and go to state 46
    bit_and                        shift and go to state 47
    equality                       shift and go to state 48
    relational                     shift and go to state 49
    additive                       shift and go to state 50
    multiplicative                 shift and go to state 51
    unary                          shift and go to state 53
    postfix                        shift and go to state 54
    primary                        shift and go to state 57

state 37

    (31) statement_matched -> Continue . Semi

    Semi            shift and go to state 71


state 38
